--- a/templates/first_page.html
+++ b/templates/first_page.html
@@ -5,7 +5,7 @@
   
         <div class="container-1">
             <div class="intro-text">
-                <div class="intro-heading">WECLOME TO FITASTIC.</div>
+                <div class="intro-heading">WELCOME TO FITASTIC.</div>
                 <div class="intro-lead-in">Your Body.</div>
                 <div class="intro-lead-in">Your Workouts.</div>
                 <div class="intro-lead-in">Your Schedules.</div>
